<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4DD0E1">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/til_username_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_username_reg"
            android:layout_marginStart="0dp">

            <EditText
                android:id="@+id/setuplastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:textColor="#fff" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/til_password_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password_reg">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPassword"
                android:textColor="#fff"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mobile_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/til_confirm_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_confirm_reg">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:textColor="#fff"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_mobile_reg">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:textColor="#fff"
                android:inputType="textEmailAddress"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bmiID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email_reg">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bmi"
                android:textColor="#fff"
                android:inputType="textEmailAddress"
                />


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/personalInfoID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiID">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="24sp"
                android:text="Personal Information:"

                />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailPhoneid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalInfoID">

            <EditText
                android:id="@+id/setupmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:textColor="#fff"
                android:textSize="21sp" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailinfoID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailPhoneid">

            <EditText
                android:id="@+id/setupemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="#fff"
                android:textSize="21sp" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/radiogroupid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailinfoID">

            <RadioGroup

                android:id="@+id/radioSexid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender:"
                    android:textSize="23sp"
                    />

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/radiogroupMaritalstatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroupid">

            <RadioGroup

                android:id="@+id/radiomarriedunmarriedid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Marital status:"
                    android:textSize="23sp"
                    />

                <RadioButton
                    android:id="@+id/Marriedid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/married"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/Unmarriedid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unmarried" />

            </RadioGroup>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/occuptationid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroupMaritalstatus">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Occupation:"
                android:textSize="23sp"
                />

            <Spinner

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerid"
                android:entries="@array/occupation"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ethnicityid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/til_mobile_reg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/occuptationid">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ethnicity:"
                android:textSize="23sp"
                />

            <Spinner

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ehtnicityspinnerid"
                android:entries="@array/ethnicity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:background="@drawable/buttonstylepink"
            android:id="@+id/bt_register"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:textColor="#000"
            android:text="@string/submit"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ethnicityid"
            />

        <ImageView
            android:id="@+id/im_profile"
            android:contentDescription="@string/user_profile_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/imaged"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/im_profile"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/setupfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/hint_firstname"
                android:textColor="#fff" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintLeft_toLeftOf="@+id/im_profile"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name_reg"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qualification"
                android:textColorHint="#fff"
                android:textColor="#fff"
                />


        </android.support.design.widget.TextInputLayout>



    </android.support.constraint.ConstraintLayout>

</ScrollView>